--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -970,15 +970,29 @@ header .fa {
 
 .quote__leftbox__popcircles {
   background: #96969D;
-  border-bottom: 3px solid transparent;
   border-radius: 50px;
   display: inline-block;
   height: 30px;
+  margin: 10px;
+  position: relative;
+  -webkit-transition: all 200ms ease-in;
+  -o-transition: all 200ms ease-in;
+  transition: all 200ms ease-in;
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
   width: 30px; }
 
 .quote__leftbox__popcircles:hover {
-  height: 40px;
-  width: 40px; }
+  -webkit-box-shadow: 0px 0px 150px #000000;
+  box-shadow: 0px 0px 150px #000000;
+  -webkit-transition: all 200ms ease-in;
+  -o-transition: all 200ms ease-in;
+  transition: all 200ms ease-in;
+  -webkit-transform: scale(1.5);
+  -ms-transform: scale(1.5);
+  transform: scale(1.5);
+  z-index: 2; }
 
 .quote__rightbox__mediabut {
   padding-top: 170px;
