--- a/resources/styles/style.scss
+++ b/resources/styles/style.scss
@@ -500,20 +500,26 @@ header .fa     {
     margin-top: 40px;
     padding-bottom: 102px;
     text-align: center;
+    
 }
 
 .quote__leftbox__popcircles {
     background: $secondary;
-    border-bottom: 3px solid transparent;
     border-radius: 50px;
     display: inline-block;
     height: 30px;
+    margin: 10px;
+	position: relative;
+	transition: all 200ms ease-in;
+	transform: scale(1);
     width: 30px;
 }
 
 .quote__leftbox__popcircles:hover {
-    height: 40px;
-    width: 40px;
+    box-shadow: 0px 0px 150px #000000;
+    transition: all 200ms ease-in;
+    transform: scale(1.5);
+    z-index: 2;
 }
 
 .quote__rightbox__mediabut  {
