--- a/resources/styles/style.scss
+++ b/resources/styles/style.scss
@@ -581,7 +581,7 @@ header .fa     {
 }
 
 .blog h2    {
-    margin: 60px 0px 0px 0px;
+    margin: 110px 0px 0px 0px;
 }
 
 .blog .popular__titleunderlinesdiv    {
@@ -664,6 +664,7 @@ header .fa     {
     display: flex;
     justify-content: space-between;
     padding-top: 40px;
+    padding-bottom: 40px;
     width: 100%;
 }
 
