--- a/resources/styles/style.scss
+++ b/resources/styles/style.scss
@@ -4,8 +4,22 @@
 @import "components/header";
 @import "components/footer";
 
+body    {
+    width: 100%;
+}
+
+.wrapper    {
+    display: flex;
+    width: 80%;  
+}
+
+ul  {
+    list-style: none;
+}
+
 // This is where the header styling begins
 
+.quote,
 header, 
 .header__leftnav, 
 .header__rightnav, 
@@ -13,7 +27,6 @@ header,
 .welcome,
 .categories,
 .popular,
-.quote,
 .blog,
 .signup,
 .contact,
@@ -54,6 +67,18 @@ header  {
     z-index:100;
 }
 
+nav a   {
+  text-decoration: none;
+  color: #232323;
+  letter-spacing: 2px;
+  transition: color 0.3s ease;
+}
+
+nav a:hover,
+nav a:active {
+  color: $quinary;
+}
+
 header ul   {
     padding: 0;
 }
@@ -71,8 +96,16 @@ header svg  {
 }
 
 .header__rightnav   {
-    margin-left: 16%;
-    margin-right: 4%;
+    display: flex;
+    justify-content: flex-end;
+    width: 20%;
+}
+
+.header__rightnav a {
+    margin: 0 15px;
+}
+
+.header__notecircle__rel {
     position: relative;
 }
 
@@ -81,10 +114,14 @@ header svg  {
     bottom: 40%;
     border-radius: 50px;
     height: 20px;
-    left: 18%;
+    left: 55%;
     position: absolute;
     width: 20px;
     animation: note 1s linear infinite;
+}
+
+a:hover .header__notecircle {
+    color: black;
 }
 
 @keyframes note {
@@ -101,24 +138,18 @@ header svg  {
     }
 }  
 
+header .fa     {
+    font-size: 23px;
+}
+
 .header__notecircle p   {
     margin: 0;
 }
 
-.header__rightnav__bagicon  {
-    height: 25px;
-    margin: 0px 15px;
-    width: 25px;
-}
-
 .header__rightnav__bagicon:hover    {
-    fill: $secondary;
+    fill: $quinary;
 }
 
-header .fa     {
-    font-size: 23px;
-    margin: 0px 30%;
-}
 
 // This is where the hero styling begins
 
@@ -127,7 +158,7 @@ header .fa     {
     background-image: url(../images/hero.jpg);
     background-position: center center;
     background-repeat: no-repeat;
-    height: calc( 100vh - 85px);
+    height: 88vh;
     justify-content: space-between;
     padding-top: 85px;
 }
@@ -162,7 +193,7 @@ header .fa     {
     align-items: center;
     display: flex;
     justify-content: center;
-    margin-top: 25%;
+    margin-top: 15%;
     position: relative;
     width: 90px
 }
@@ -175,9 +206,9 @@ header .fa     {
     width: 12px;
 }
 
-.hero__navcircle:hover {
-    background: $secondary;
-}
+// .hero__navcircle:hover {
+//     background: $secondary;
+// }
 
 .hero__shopnowbut a  {
     color: $tertiary;
@@ -197,7 +228,16 @@ header .fa     {
     padding: 20px;
 }
 
+.hero__navbutleftdiv svg:hover,
+.hero__navbutrightdiv svg:hover {
+    color: $quinary;
+}
+
 // This is where the .welcome styling begins
+
+.welcome {
+    padding: 100px 0;
+}
 
 .welcome .wrapper   {
     align-items: center;
@@ -215,12 +255,13 @@ header .fa     {
 }
 
 .welcome h4 {
-    margin-top: 115px;
+    margin-top: 120px;
 }
 
 .welcome__plantimgdiv   {
     position: absolute;
-    top: 120px;
+    right: 538px;
+    top: 104px;
 }
 
 .welcome__plantimgdiv img   {
@@ -228,7 +269,7 @@ header .fa     {
 }
 
 .welcome h2 {
-    margin-top: 20px;
+    margin-top: 5px;
 }
 
 .welcome p:first-of-type    {
@@ -243,11 +284,11 @@ header .fa     {
 // This is where styling for the categories section begins 
 
 .categories {
-    padding-top: 100px;
+    padding-top: 120px;
 }
 
 .categories h3  {
-    margin: 10px 0;
+    margin: 10px 0 0 0;
 }
 
 .categories p   {
@@ -327,7 +368,7 @@ header .fa     {
 // This is where styling starts for the popular section
 
 .popular    {
-    margin-top: 70px;
+    padding-top: 120px;
 }
 
 .popular .wrapper   {    
@@ -371,7 +412,7 @@ header .fa     {
 }
 
 .popular__nav a {
-    padding: 0px 15px;
+    margin: 0px 15px;
 }
 
 .popular__nav a:hover   {
@@ -455,10 +496,14 @@ header .fa     {
 }
 
 .popular__prodimgdiv-hover a   {
-    background: $tertiary;    
-    border: 1px solid $secondary;
-    color: $secondary;
+    background: $quinary;    
+    color: $tertiary;
     padding: 3% 8%;
+    text-align: center;
+}
+
+.popular__prodimgdiv-hover a:hover {
+    background: $secondary;
 }
 
 .popular__price     {
@@ -530,15 +575,14 @@ header .fa     {
     width: 30px;
 }
 
-.quote__leftbox__popcircles:hover {
-    transition: all 200ms ease-in;
-    transform: scale(1.5);
-    z-index: 2;
-}
-
 .quote__rightbox__mediabut  {
     padding-top: 170px;
     text-align: center;
+}
+
+.quote__rightbox__mediabut a:hover,
+.quote__rightbox__mediabut a:active {
+    opacity: 0.5;
 }
 
 .quote__rightbox__txt   {
@@ -575,6 +619,10 @@ header .fa     {
 
 // This is where styling begins for the blog section
 
+.blog {
+    padding-top: 40px;
+}
+
 .blog .wrapper  {
     align-items: center;
     flex-direction: column;
@@ -606,12 +654,13 @@ header .fa     {
     text-align: left;
 }
 
-.blog p:first-of-type   {
+.blog__date   {
     color: $secondary;
 }
 
-.blog a:hover   {
+.read_more {
     border-bottom: 1px solid $primary;
+    width: 76px;
 }
 
 // This is where styling begins for the sign up section
@@ -636,7 +685,6 @@ header .fa     {
 }
 
 .signup__emailbox   {
-    border-bottom: 1px solid $secondary;
     width: 80%;
 }
 
@@ -650,7 +698,10 @@ header .fa     {
 
 .signup input   {
     border: none;
-    width: 70%;
+    border-bottom: 1px solid $secondary;
+    font-family: $font-stack;
+    padding: 2%;
+    width: 100%;
 }
 
 .signup button  {
@@ -703,12 +754,16 @@ header .fa     {
     color: $primary;
 }
 
-.contact__smedbox i {
-    padding: 7px;
+.contact__smedbox {
+    word-spacing: 10px;
 }
 
+// .contact__smedbox i {
+//     padding: 7px;
+// }
+
 .contact i:hover {
-    color: $secondary;
+    color: $quinary;
 }
 
 .contact h3 {
@@ -775,6 +830,12 @@ header .fa     {
     width: 100%;
 }
 
+.overlay:hover {
+    opacity: 0.5;
+    transition: .5s ease;
+    background-color: rgba(0,0,0,0.23);
+}
+
 .contact__rightbox__gallery {
 	display: flex;
 	flex-wrap: wrap;
@@ -806,6 +867,35 @@ footer .wrapper {
 }
 
 footer .footer__dark   {
+    color: $primary;
+}
+
+// This is where the styling for link page starts
+
+.link_body {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+}
+
+.linkpage_text_box {
+    background: $secondary;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    padding: 5%;
+    width: 80%;
+}
+
+.linkpage_text_box a {
+    color: $quinary;
+    font-size: 32px;
+    text-align: center;
+}
+
+.linkpage_text_box a:hover,
+.linkpage_text_box a:active {
     color: $primary;
 }
 
@@ -884,7 +974,7 @@ footer .footer__dark   {
     
     .contact__lcbox a,
     .contact__rcbox a   {
-        border-bottom: .5px solid $secondary;
+        border-bottom: .5px solid $line-colour;
     }
     
     .contact__lcbox a:last-of-type,
@@ -1115,7 +1205,6 @@ footer .footer__dark   {
         width: 50%;
     }
 
-
 }
 
 @media (max-width: 415px) {
@@ -1189,4 +1278,3 @@ footer .footer__dark   {
     }
 
 }
-
