--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -572,6 +572,9 @@ nav a:active {
 header ul {
   padding: 0; }
 
+a:focus {
+  outline: none; }
+
 .header__leftnav {
   margin-right: 7%; }
 
@@ -582,16 +585,16 @@ header svg {
   width: 100%; }
 
 .header__rightnav {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-  width: 20%; }
-
-.header__rightnav a {
-  margin: 0 15px; }
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  margin-left: 10%;
+  width: 150px; }
 
 .header__notecircle__rel {
   position: relative; }
@@ -651,7 +654,7 @@ header .fa {
 
 .hero h2 {
   color: #96969D;
-  margin-top: 180px; }
+  margin-top: 120px; }
 
 .hero__centercontent {
   -webkit-box-align: center;
@@ -712,6 +715,77 @@ header .fa {
 .hero__navbutleftdiv svg:hover,
 .hero__navbutrightdiv svg:hover {
   color: #FF9A9E; }
+
+nav a {
+  color: #000;
+  text-decoration: none; }
+
+nav ul {
+  padding: 0;
+  margin: 0; }
+
+nav ul li {
+  list-style-type: none; }
+
+.hamburger__menu {
+  position: relative; }
+
+.hamburger__menu__imgdiv {
+  background: #FFF;
+  height: 28px;
+  padding: 5px;
+  width: 30px; }
+
+.hamburger__menu__imgdiv img {
+  width: 100%; }
+
+.hamburger__menu__content {
+  background: #FFF;
+  right: 0;
+  opacity: 0;
+  position: absolute;
+  top: 100%;
+  -webkit-transform: translateY(-2em);
+  -ms-transform: translateY(-2em);
+  transform: translateY(-2em);
+  -webkit-transition: all 0.4s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+  -o-transition: all 0.4s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+  transition: all 0.4s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+  visibility: hidden;
+  /* hides .hamburger__menu__content */
+  width: 170px;
+  z-index: -1; }
+
+.hamburger__menu__content li {
+  width: 150px; }
+
+.hamburger__menu__content a {
+  display: block;
+  margin: 0;
+  text-align: center;
+  padding: 10px;
+  width: 100%; }
+
+.hamburger__menu__content a:hover,
+.hamburger__menu__content a:active {
+  background: gray;
+  color: #fff; }
+
+.hamburger__menu:focus .hamburger__menu__content,
+.hamburger__menu:focus-within .hamburger__menu__content,
+.hamburger__menu:hover .hamburger__menu__content,
+.hamburger__menu:active .hamburger__menu__content {
+  visibility: visible;
+  /* shows hamburger__menu__content */
+  opacity: 1;
+  z-index: 1;
+  -webkit-transform: translateY(0%);
+  -ms-transform: translateY(0%);
+  transform: translateY(0%);
+  -webkit-transition-delay: 0s, 0s, 0.3s;
+  -o-transition-delay: 0s, 0s, 0.3s;
+  transition-delay: 0s, 0s, 0.3s;
+  /* this removes the transition delay so the menu will be visible while the other styles transition */ }
 
 .welcome {
   padding: 100px 0; }
@@ -1413,6 +1487,15 @@ footer .footer__dark {
   .signup__locationimgdiv {
     width: 15%; } }
 
+@media (max-width: 768px) {
+  header {
+    -ms-flex-pack: distribute;
+    justify-content: space-around; }
+  .header__leftnav {
+    display: none; }
+  .header__rightnav {
+    width: 40%; } }
+
 /* Landscape phone to portrait tablet */
 @media (max-width: 660px) {
   header {
@@ -1423,24 +1506,11 @@ footer .footer__dark {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     min-height: unset; }
-  .header__leftnav {
-    -webkit-box-ordinal-group: 4;
-    -ms-flex-order: 3;
-    order: 3;
-    padding-bottom: 10px; }
   .logoimgdiv {
     margin: 20px;
     width: 36%; }
-  .header__rightnav {
-    width: 28%; }
   .header__notecircle {
     left: 20%; }
-  .header__rightnav a:first-of-type {
-    padding-left: 15px; }
-  .header__rightnav__bagicon {
-    height: 25px;
-    margin: 0px 10px 0px 0px;
-    width: 18px; }
   .hero__navindicatordiv {
     display: none; }
   .hero__centercontent h2 {
@@ -1466,15 +1536,76 @@ footer .footer__dark {
     padding-top: unset; }
   .quote__rightbox {
     padding: 50px 0px; }
-  .contact__lcbox {
-    padding: 15px 0px 0px 10px; }
+  .contact__lcbox a,
+  .contact__rcbox a {
+    padding: 10px 0 10px 0; }
   .contact__pmbox {
-    padding-bottom: 50px; } }
+    padding-bottom: 50px; }
+  footer .wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; } }
+
+@media (max-width: 620px) {
+  .signup__locationimgscont {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 100%; }
+  .signup__locationimgdiv {
+    width: 40%;
+    padding: 20px 10px 20px 10px;
+    border: 1px solid black;
+    margin: 10px; }
+  .contact .wrapper {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .contact__leftbox {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-align: center;
+    width: 70%; }
+  .contact__lcbox,
+  .contact__rcbox {
+    width: 70%; }
+  .contact__smedbox {
+    margin-top: 40px; }
+  .contact__leftboxcont {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .contact__rightboxcont {
+    width: 90%; }
+  .contact__pmbox {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; } }
 
 /* Landscape phones and down */
 @media (max-width: 480px) {
-  .hero h2 {
-    margin-top: 130px; }
+  .hero {
+    height: unset; }
+  .welcome {
+    padding: unset; }
+  .hero__shopnowbut {
+    margin-top: 40px;
+    margin-bottom: 30px; }
   .categories .wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1523,27 +1654,16 @@ footer .footer__dark {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center; }
-  .contact__rcbox {
-    width: 37%; }
-  .contact__rightboxcont {
-    width: 50%; } }
+  .contact__smedbox {
+    word-spacing: 8px; } }
 
 @media (max-width: 415px) {
-  .header__leftnav {
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    margin: 0; }
+  .hero h2 {
+    margin-top: 60px; }
   .header__notecircle {
     left: 26%; }
   .header__notecircle i {
     padding-left: 15px; }
-  .header__leftnav a {
-    padding: 4px 30px; }
-  .header__rightnav .fa {
-    margin: 0; }
   .fa-search {
     padding-left: 8px; }
   .fa-bars {
