--- a/resources/styles/style.scss
+++ b/resources/styles/style.scss
@@ -83,6 +83,11 @@ header ul   {
     padding: 0;
 }
 
+a:focus {
+    outline: none;
+}
+
+
 .header__leftnav    {
     margin-right: 7%;
 }
@@ -96,13 +101,11 @@ header svg  {
 }
 
 .header__rightnav   {
+    align-items: center;
     display: flex;
-    justify-content: flex-end;
-    width: 20%;
-}
-
-.header__rightnav a {
-    margin: 0 15px;
+    justify-content: space-around;
+    margin-left:10%;
+    width: 150px;
 }
 
 .header__notecircle__rel {
@@ -169,7 +172,7 @@ header .fa     {
 
 .hero h2    {
     color: $secondary;
-    margin-top: 180px;
+    margin-top: 120px;
 }
 
 .hero__centercontent {
@@ -206,10 +209,6 @@ header .fa     {
     width: 12px;
 }
 
-// .hero__navcircle:hover {
-//     background: $secondary;
-// }
-
 .hero__shopnowbut a  {
     color: $tertiary;
     font-size: 16px;
@@ -231,6 +230,79 @@ header .fa     {
 .hero__navbutleftdiv svg:hover,
 .hero__navbutrightdiv svg:hover {
     color: $quinary;
+}
+
+// This is where the hamburger menu styling begins
+
+nav a {
+    color: #000;
+    text-decoration: none;
+}
+
+nav ul { 
+    padding: 0; 
+    margin: 0; 
+}
+
+nav ul li {
+    list-style-type: none;
+}
+
+.hamburger__menu { 
+    position: relative; 
+}
+
+.hamburger__menu__imgdiv { 
+    background: #FFF;
+    height: 28px;
+    padding: 5px;
+    width: 30px;
+}
+
+.hamburger__menu__imgdiv img {
+    width: 100%;
+}
+
+.hamburger__menu__content { 
+    background: #FFF;
+    right: 0;
+    opacity: 0;
+    position: absolute;
+    top: 100%;
+    transform: translateY(-2em);
+    transition: all 0.4s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+    visibility: hidden; /* hides .hamburger__menu__content */
+    width: 170px;
+    z-index: -1;
+}
+
+.hamburger__menu__content li {
+    width: 150px;
+}
+
+.hamburger__menu__content a {
+    display: block;
+    margin: 0;
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+}
+
+.hamburger__menu__content a:hover,
+.hamburger__menu__content a:active {
+    background: gray;
+    color:#fff;
+}
+
+.hamburger__menu:focus .hamburger__menu__content,
+.hamburger__menu:focus-within .hamburger__menu__content,
+.hamburger__menu:hover .hamburger__menu__content,
+.hamburger__menu:active .hamburger__menu__content {
+    visibility: visible; /* shows hamburger__menu__content */
+    opacity: 1;
+    z-index: 1;
+    transform: translateY(0%);
+    transition-delay: 0s, 0s, 0.3s; /* this removes the transition delay so the menu will be visible while the other styles transition */
 }
 
 // This is where the .welcome styling begins
@@ -758,10 +830,6 @@ header .fa     {
     word-spacing: 10px;
 }
 
-// .contact__smedbox i {
-//     padding: 7px;
-// }
-
 .contact i:hover {
     color: $quinary;
 }
@@ -1040,47 +1108,40 @@ footer .footer__dark   {
     .signup__locationimgdiv {
         width: 15%;
     }
+}
 
-    // This is where the hamburger menu starts
-    // This is where the hamburger menu ends
+@media (max-width: 768px) {
+    header {
+        justify-content: space-around;
+    }
+    
+    .header__leftnav {
+        display: none;
+    }
+
+    .header__rightnav {
+        width: 40%;
+    }
 }
 
 /* Landscape phone to portrait tablet */
+
 @media (max-width: 660px) {
     header  {
         flex-direction: row;
         flex-wrap: wrap;
         min-height: unset;
     }
-    
-    .header__leftnav    {
-        order: 3;
-        padding-bottom: 10px;
-    }
-    
+        
     .logoimgdiv     {
         margin: 20px;
         width: 36%;
     }
-    
-    .header__rightnav   {
-        width: 28%;
-    }
-    
+        
     .header__notecircle {
         left: 20%;
     }
     
-    .header__rightnav a:first-of-type {
-        padding-left: 15px;
-    }
-
-    .header__rightnav__bagicon {
-        height: 25px;
-        margin: 0px 10px 0px 0px;
-        width: 18px;
-    }    
-
     .hero__navindicatordiv  {
         display: none;
     }    
@@ -1126,21 +1187,85 @@ footer .footer__dark   {
         padding: 50px 0px;
     }    
 
-    .contact__lcbox {
-	    padding: 15px 0px 0px 10px;    
-    }    
+    .contact__lcbox a,
+    .contact__rcbox a {
+        padding: 10px 0 10px 0;
+    }
 
     .contact__pmbox {
         padding-bottom: 50px;
     }
+
+    footer .wrapper {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 620px) {
+
+    .signup__locationimgscont {
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .signup__locationimgdiv {
+        width: 40%;
+        padding: 20px 10px 20px 10px;
+        border: 1px solid black;
+        margin: 10px;
+    }
+
+    .contact .wrapper {
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .contact__leftbox {
+        flex-direction: column;
+        text-align: center;
+        width: 70%;
+    }
+
+    .contact__lcbox,
+    .contact__rcbox {
+        width: 70%;
+    }
+
+    .contact__smedbox {
+        margin-top: 40px;
+    }
+
+    .contact__leftboxcont {
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .contact__rightboxcont {
+        width: 90%;
+    }
+
+    .contact__pmbox {
+        justify-content: center;
+    }
+
 
 }
 
 /* Landscape phones and down */
 @media (max-width: 480px) {
 
-    .hero h2 {
-    	margin-top: 130px;
+    .hero {
+        height: unset;
+    }
+
+    .welcome {
+        padding: unset;
+    }
+
+    .hero__shopnowbut {
+        margin-top: 40px;
+        margin-bottom: 30px;
     }
 
     .categories .wrapper {
@@ -1200,21 +1325,15 @@ footer .footer__dark   {
 	    justify-content: center;
     }
 
-    .contact__rcbox {
-        width: 37%;
-    }
-
-    .contact__rightboxcont {
-        width: 50%;
+    .contact__smedbox {
+        word-spacing: 8px;
     }
 
 }
 
 @media (max-width: 415px) {
-    .header__leftnav    {
-        flex-wrap: wrap;
-        justify-content: center;
-        margin: 0;
+    .hero h2 {
+        margin-top: 60px;
     }
 
     .header__notecircle     {
@@ -1223,14 +1342,6 @@ footer .footer__dark   {
 
     .header__notecircle i {
     	padding-left: 15px;
-    }
-
-    .header__leftnav a {
-	    padding: 4px 30px;
-    }
-
-    .header__rightnav .fa   {
-        margin: 0;
     }
 
     .fa-search  {
